Added 5 pages, uploaded images, and put CSS

--- a/index.html
+++ b/index.html
@@ -3,20 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Replace with your site name</title>
-    <link rel="stylesheet" href="style.css">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="css/home-page.css">
+
 </head>
 <body>
-    <header>
-        
-    </header>
 
-    <main>
+<header>
+    <h1>Portfolio 
+        By Hein Win Kyaw
+    </h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="Environment.html">Environment</a>
+        <a href="3Dmodeling.html">3D Modeling</a>
+        <a href="Lighting.html">Lighting</a>
+    </nav>
+</header>
 
-    </main>
+<main>
+    <a href="Environment.html" class="card">
+        <h2>Environment Design</h2>
+        <p>Discover immersive worlds and landscapes</p>
+    </a>
+    <a href="3Dmodeling.html" class="card">
+        <h2>3D Modeling</h2>
+        <p>Explore creative 3D concepts and designs</p>
+    </a>
+    <a href="Lighting.html" class="card">
+        <h2>Lighting</h2>
+        <p>See how lighting brings scenes to life</p>
+    </a>
+</main>
 
-    <footer>
+<footer>
+    &copy; 2024 Hein Win Kyaw. All rights reserved.
+</footer>
 
-    </footer>
 </body>
 </html>
